--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -23,8 +23,9 @@ dependencies {
         testCompile files(toolsJar)
     }
     testCompile 'junit:junit:4.12'
-    testCompile 'com.google.truth:truth:0.43'
-    testCompile 'com.google.testing.compile:compile-testing:0.15'
+    // Note: compile-testing 0.18 does not support truth 0.46 or newer.
+    testCompile 'com.google.truth:truth:0.45'
+    testCompile 'com.google.testing.compile:compile-testing:0.18'
     // generated files during test need objectbox dependencies to compile
     testCompile "io.objectbox:objectbox-java:$objectbox_java_version"
 }
