--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        android_version = '3.3.0' // minimal supported version is 3.0.0
+        android_version = '3.4.0' // Minimal supported version is 3.0.0. http://google.github.io/android-gradle-dsl/javadoc/
         kotlin_version = '1.3.41'
         mockito_version = '2.25.1'
 
