Fix duplicate signature issue: java plugin already adds jar artifact.
https://github.com/gradle/gradle/issues/8213

--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -49,7 +49,7 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
-    archives jar
+    // jar added by java plugin.
     archives javadocJar
     archives sourcesJar
 }
