--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -30,12 +30,12 @@ buildConfig {
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
 
 task javadocJar(type: Jar) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from 'README'
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from 'README'
 }
 
