--- a/objectbox-generator/build.gradle
+++ b/objectbox-generator/build.gradle
@@ -45,12 +45,12 @@ javadoc {
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from 'build/docs/javadoc'
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
 //    from sourceSets.main.allSource
     from 'README'
 }
