--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from 'README'
 }
 
