--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,8 @@ buildscript {
         def versionPostFixValue = project.findProperty('versionPostFix')
         def versionPostFix = versionPostFixValue ? "-$versionPostFixValue" : ''
         
-        //objectbox_plugin_version = "2.4.0$versionPostFix-SNAPSHOT" // plugin, processor, generator and code-modifier version
-        objectbox_plugin_version = "2.4.0-RC" // plugin, processor, generator and code-modifier version
-        //def dependencies_version = '2.4.0-dev-SNAPSHOT'
-        def dependencies_version = '2.4.0-RC'
+        objectbox_plugin_version = "2.4.0$versionPostFix-SNAPSHOT" // plugin, processor, generator and code-modifier version
+        def dependencies_version = '2.4.0-dev-SNAPSHOT'
         objectbox_java_version = dependencies_version // Java version used by code and tests
         objectbox_runtime_version = dependencies_version // The plugin adds dependencies with this version to projects applying it
 
