--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     // Since Gradle 5.0 annotation processors are no longer detected on the compile classpath, 
     // so add to processor classpath instead.
     annotationProcessor "com.google.auto.service:auto-service:$autoService"
+    // incap generates the META-INF descriptor required to enable incremental annotation processing with Gradle.
+    def incap = '0.2'
+    compileOnly "net.ltgt.gradle.incap:incap:$incap"
+    annotationProcessor "net.ltgt.gradle.incap:incap-processor:$incap"
 
     // manually add tools.jar required by compile-testing
     def jvm = org.gradle.internal.jvm.Jvm.current()
