--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -3,11 +3,29 @@ apply plugin: 'kotlin'
 apply plugin: 'groovy' // for dsl tests
 apply plugin: 'de.fuerstenau.buildconfig'
 apply plugin: 'idea' // to pick up generated BuildConfig in IntelliJ
+apply plugin: 'maven-publish'
 
 group = 'io.objectbox'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+
+// For integration tests (TestKit): Write the plugin's classpath to a file to share with the tests.
+task createClasspathManifest {
+    def outputDir = file("$buildDir/$name")
+    def files = sourceSets.test.runtimeClasspath
+
+    inputs.files(sourceSets.main.runtimeClasspath)
+            .withPropertyName("runtimeClasspath")
+            .withNormalizer(ClasspathNormalizer)
+    outputs.dir(outputDir)
+            .withPropertyName("outputDir")
+
+    doLast {
+        outputDir.mkdirs()
+        file("$outputDir/plugin-classpath.txt").text = sourceSets.main.runtimeClasspath.join("\n")
+    }
+}
 
 dependencies {
     compile gradleApi()
@@ -21,8 +39,10 @@ dependencies {
     compile "io.objectbox:objectbox-java-api:$objectbox_java_version"
 
     testCompile gradleTestKit()
+    testRuntimeOnly files(createClasspathManifest)
     testCompile "junit:junit:$junit_version"
     testCompile "org.mockito:mockito-core:$mockito_version"
+    testCompile 'com.google.truth:truth:1.0'
     // For plugin apply tests and outdated TestKit tests (dir "test-gradle-projects").
     testCompile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     testCompile "com.android.tools.build:gradle:$android_version"
@@ -33,6 +53,57 @@ buildConfig {
     clsName = 'GradlePluginBuildConfig'
     // also add runtime version to BuildConfig
     buildConfigField 'String', 'VERSION_RUNTIME', {"$objectbox_runtime_version"}
+}
+
+// For integration tests (TestKit): publish other modules to repository in build folder.
+evaluationDependsOn(":objectbox-code-modifier")
+evaluationDependsOn(":objectbox-generator")
+evaluationDependsOn(":objectbox-processor")
+publishing {
+    repositories {
+        maven {
+            url = "$buildDir/repository"
+            name = "test"
+        }
+    }
+    publications {
+        modifier(MavenPublication) {
+            def fromProject = project(":objectbox-code-modifier")
+            from(fromProject.components.java)
+            groupId = fromProject.group.toString()
+            artifactId = fromProject.name
+            version = fromProject.version.toString()
+        }
+        generator(MavenPublication) {
+            def fromProject = project(":objectbox-generator")
+            from(fromProject.components.java)
+            groupId = fromProject.group.toString()
+            artifactId = fromProject.name
+            version = fromProject.version.toString()
+        }
+        processor(MavenPublication) {
+            def fromProject = project(":objectbox-processor")
+            from(fromProject.components.java)
+            groupId = fromProject.group.toString()
+            artifactId = fromProject.name
+            version = fromProject.version.toString()
+        }
+    }
+}
+tasks {
+    test {
+        inputs.files(
+                project(":objectbox-code-modifier").tasks.named("jar"),
+                project(":objectbox-generator").tasks.named("jar"),
+                project(":objectbox-processor").tasks.named("jar")
+        )
+        dependsOn "publishModifierPublicationToTestRepository", "publishGeneratorPublicationToTestRepository", "publishProcessorPublicationToTestRepository"
+
+        // For integration tests (TestKit): steal project properties required for TestKit projects.
+        systemProperty("internalObjectBoxRepo", internalObjectBoxRepo)
+        systemProperty("internalObjectBoxRepoUser", internalObjectBoxRepoUser)
+        systemProperty("internalObjectBoxRepoPassword", internalObjectBoxRepoPassword)
+    }
 }
 
 apply from: rootProject.file("gradle/objectbox-publish.gradle")
@@ -72,25 +143,3 @@ uploadArchives {
         }
     }
 }
-
-// Write the plugin's classpath to a file to share with the tests
-task createClasspathManifest {
-    def outputDir = file("$buildDir/$name")
-    def files = sourceSets.test.runtimeClasspath
-
-    inputs.files files
-    outputs.dir outputDir
-
-    doLast {
-        outputDir.mkdirs()
-        file("$outputDir/plugin-classpath.txt").text = files.join("\n")
-    }
-}
-
-// Works with gradle build, but not in IntelliJ -> run manually
-tasks['test'].dependsOn createClasspathManifest
-
-//
-//dependencies {
-//    testRuntime files(createClasspathManifest)
-//}
