--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -20,13 +20,12 @@ dependencies {
     compile "io.objectbox:objectbox-java:$objectbox_java_version"
     compile "io.objectbox:objectbox-java-api:$objectbox_java_version"
 
-    // For Gradle test projects (dir "test-gradle-projects")
-    testCompile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    testCompile "com.android.tools.build:gradle:$android_version"
-
+    testCompile gradleTestKit()
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:$mockito_version"
-    testCompile gradleTestKit()
+    // For plugin apply tests and outdated TestKit tests (dir "test-gradle-projects").
+    testCompile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    testCompile "com.android.tools.build:gradle:$android_version"
 }
 
 buildConfig {
