--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     compile "io.objectbox:objectbox-java-api:$objectbox_java_version"
     compile project (':objectbox-generator')
 
-    testCompile 'junit:junit:4.12'
+    testCompile "junit:junit:$junit_version"
     testCompile "org.mockito:mockito-core:$mockito_version"
     testCompile 'com.natpryce:hamkrest:1.7.0.0'
 }
