--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     compile "io.objectbox:objectbox-java-api:$objectbox_java_version"
 
     testCompile gradleTestKit()
-    testCompile 'junit:junit:4.12'
+    testCompile "junit:junit:$junit_version"
     testCompile "org.mockito:mockito-core:$mockito_version"
     // For plugin apply tests and outdated TestKit tests (dir "test-gradle-projects").
     testCompile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
