--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     if(toolsJar != null) {
         testCompile files(toolsJar)
     }
-    testCompile 'junit:junit:4.12'
+    testCompile "junit:junit:$junit_version"
     // Note: compile-testing 0.18 does not support truth 0.46 or newer.
     testCompile 'com.google.truth:truth:0.45'
     testCompile 'com.google.testing.compile:compile-testing:0.18'
