--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version = '1.3.71'
         junit_version = '4.13'
         mockito_version = '2.25.1'
+        moshi_version = '1.9.2'
 
         // Typically, only edit those two:
         def versionNumber = '2.5.2' // Without "-SNAPSHOT", e.g. '2.5.0' or '2.4.0-RC'.
