--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -10,19 +10,18 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile 'org.greenrobot:essentials:3.0.0-RC1'
-    def moshi_version = '1.9.2'
-    compile "com.squareup.moshi:moshi:$moshi_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation 'org.greenrobot:essentials:3.0.0-RC1'
+    implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
-    compile "io.objectbox:objectbox-java-api:$objectbox_java_version"
-    compile project (':objectbox-generator')
+    implementation "io.objectbox:objectbox-java-api:$objectbox_java_version"
+    implementation project (':objectbox-generator')
 
-    testCompile "junit:junit:$junit_version"
-    testCompile "org.mockito:mockito-core:$mockito_version"
-    testCompile 'com.natpryce:hamkrest:1.7.0.0'
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation 'com.natpryce:hamkrest:1.7.0.0'
 }
 
 buildConfig {
