--- a/gradle/objectbox-publish.gradle
+++ b/gradle/objectbox-publish.gradle
@@ -20,8 +20,11 @@ javadoc {
 }
 
 signing {
-    if (project.hasProperty('signing.keyId') && project.hasProperty('signing.password') &&
-            project.hasProperty('signing.secretKeyRingFile')) {
+    if (project.hasProperty('signingKeyId')
+            && project.hasProperty('signingKeyFile')
+            && project.hasProperty('signingPassword')) {
+        String signingKey = new File(signingKeyFile).text
+        useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
         sign configurations.archives
     } else {
         println "Signing information missing/incomplete for ${project.name}"
