--- a/gradle/objectbox-publish.gradle
+++ b/gradle/objectbox-publish.gradle
@@ -19,15 +19,19 @@ javadoc {
     }
 }
 
-signing {
-    if (project.hasProperty('signingKeyId')
+def hasSigningProperties() {
+    return (project.hasProperty('signingKeyId')
             && project.hasProperty('signingKeyFile')
-            && project.hasProperty('signingPassword')) {
+            && project.hasProperty('signingPassword'))
+}
+
+signing {
+    if (hasSigningProperties()) {
         String signingKey = new File(signingKeyFile).text
         useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
         sign configurations.archives
     } else {
-        println "Signing information missing/incomplete for ${project.name}"
+        println "WARNING: Signing information missing/incomplete for ${project.name}"
     }
 }
 
@@ -41,10 +45,16 @@ afterEvaluate { project ->
 
                 if (preferredRepo == 'local') {
                     repository url: repositories.mavenLocal().url
+                    println "Uploading archives to mavenLocal()."
                 } else if (preferredRepo != null
                         && project.hasProperty('preferredUsername')
                         && project.hasProperty('preferredPassword')) {
+                    if (!hasSigningProperties()) {
+                        throw new InvalidUserDataException("To upload to repo signing is required.")
+                    }
+
                     configuration = configurations.deployerJars
+
                     // replace placeholders
                     def repositoryUrl = preferredRepo
                             .replace('__groupId__', project.group)
@@ -52,6 +62,7 @@ afterEvaluate { project ->
                     repository(url: repositoryUrl) {
                         authentication(userName: preferredUsername, password: preferredPassword)
                     }
+                    println "Uploading archives to $repositoryUrl."
                 } else if (project.hasProperty('sonatypeUsername')
                         && project.hasProperty('sonatypePassword')) {
                     beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
@@ -62,6 +73,7 @@ afterEvaluate { project ->
                     repository(url: sonatypeRepositoryUrl) {
                         authentication(userName: sonatypeUsername, password: sonatypePassword)
                     }
+                    println "Uploading archives to $sonatypeRepositoryUrl."
                 } else {
                     println "Deployment settings missing/incomplete for ${project.name}."
                 }
