--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         android_version = '3.6.3' // Minimal supported version is 3.0.0. http://google.github.io/android-gradle-dsl/javadoc/
         kotlin_version = '1.3.71'
+        essentials_version = '3.0.0-RC1'
         junit_version = '4.13'
         mockito_version = '3.3.3'
         moshi_version = '1.9.2'
