--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
         // Typically, only edit those two:
         def versionNumber = '2.6.0' // Without "-SNAPSHOT", e.g. '2.5.0' or '2.4.0-RC'.
-        def isRelease = false  // Set to true for releasing to ignore versionPostFix to avoid e.g. "-dev" versions.
+        def isRelease = true  // Set to true for releasing to ignore versionPostFix to avoid e.g. "-dev" versions.
 
         // Calculate version codes.
         def versionPostFix
