--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -20,8 +20,7 @@ dependencies {
     implementation project (':objectbox-generator')
 
     testImplementation "junit:junit:$junit_version"
-    testImplementation "org.mockito:mockito-core:$mockito_version"
-    testImplementation 'com.natpryce:hamkrest:1.7.0.0'
+    testImplementation "com.google.truth:truth:$truth_version"
 }
 
 buildConfig {
