--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -31,9 +31,8 @@ dependencies {
         testCompile files(toolsJar)
     }
     testImplementation "junit:junit:$junit_version"
-    // Note: compile-testing 0.18 does not support truth 0.46 or newer.
-    testImplementation 'com.google.truth:truth:0.45'
-    testImplementation 'com.google.testing.compile:compile-testing:0.18'
+    testImplementation "com.google.truth:truth:$truth_version"
+    testImplementation 'com.google.testing.compile:compile-testing:0.19'
     // generated files during test need objectbox dependencies to compile
     testImplementation "io.objectbox:objectbox-java:$objectbox_java_version"
 }
