--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -56,6 +56,7 @@ buildConfig {
     // Versions of libraries to add to projects applying the plugin.
     buildConfigField 'String', 'APPLIES_JAVA_VERSION', {"$applies_ob_java_version"}
     buildConfigField 'String', 'APPLIES_NATIVE_VERSION', {"$applies_ob_native_version"}
+    buildConfigField 'String', 'APPLIES_NATIVE_SYNC_VERSION', {"$applies_ob_native_sync_version"}
 }
 
 // For integration tests (TestKit): publish other modules to repository in build folder.
