--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
     ext {
+        // Kotlin version must match the one shipped with Gradle (see output of `gradlew --version`)
+        // to avoid conflicts when compiling our Gradle plugin. https://youtrack.jetbrains.com/issue/KT-38010
+        kotlin_version = '1.3.72' // Gradle 6.7
+
         android_version = '3.6.3' // Minimal supported version is 3.0.0. http://google.github.io/android-gradle-dsl/javadoc/
-        kotlin_version = '1.4.10'
         essentials_version = '3.1.0'
         junit_version = '4.13.1'
         truth_version = '1.0'
