--- a/objectbox-code-modifier/build.gradle
+++ b/objectbox-code-modifier/build.gradle
@@ -27,8 +27,6 @@ buildConfig {
     clsName = 'CodeModifierBuildConfig'
 }
 
-apply from: rootProject.file("gradle/objectbox-publish.gradle")
-
 task javadocJar(type: Jar) {
     archiveClassifier = 'javadoc'
     from 'README'
@@ -39,29 +37,16 @@ task sourcesJar(type: Jar) {
     from 'README'
 }
 
-artifacts {
-    // jar added by java plugin.
-    archives javadocJar
-    archives sourcesJar
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            // Basic definitions are defined in root project
-            pom.project {
-                name 'ObjectBox Code Modifier'
-                description 'Code modifier for ObjectBox (NoSQL for Objects)'
-
-                licenses {
-                    license {
-                        name 'GNU General Public License, Version 3'
-                        url 'http://www.gnu.org/licenses/gpl.txt'
-                        distribution 'repo'
-                    }
-                }
-
-            }
+apply from: rootProject.file("gradle/objectbox-publish.gradle")
+// Set project-specific properties
+publishing.publications {
+    mavenJava(MavenPublication) {
+        from components.java
+        artifact sourcesJar
+        artifact javadocJar
+        pom {
+            name = 'ObjectBox Code Modifier'
+            description = 'Code modifier for ObjectBox (NoSQL for Objects)'
         }
     }
 }
