--- a/objectbox-processor/build.gradle
+++ b/objectbox-processor/build.gradle
@@ -33,8 +33,6 @@ dependencies {
     testImplementation "io.objectbox:objectbox-java:$objectbox_java_version"
 }
 
-apply from: rootProject.file("gradle/objectbox-publish.gradle")
-
 task javadocJar(type: Jar) {
     archiveClassifier = 'javadoc'
     from 'README'
@@ -51,23 +49,16 @@ artifacts {
     archives sourcesJar
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            // Basic definitions are defined in root project
-            pom.project {
-                name 'ObjectBox Processor'
-                description 'Annotation processor for ObjectBox (NoSQL for Objects)'
 
-                licenses {
-                    license {
-                        name 'GNU General Public License, Version 3'
-                        url 'http://www.gnu.org/licenses/gpl.txt'
-                        distribution 'repo'
-                    }
-                }
-
-            }
+apply from: rootProject.file("gradle/objectbox-publish.gradle")
+// Set project-specific properties
+publishing.publications {
+    mavenJava(MavenPublication) {
+        from components.java
+        artifact sourcesJar
+        pom {
+            name = 'ObjectBox Processor'
+            description = 'Annotation processor for ObjectBox (NoSQL for Objects)'
         }
     }
 }
