--- a/objectbox-generator/build.gradle
+++ b/objectbox-generator/build.gradle
@@ -40,8 +40,6 @@ javadoc {
     }
 }
 
-apply from: rootProject.file("gradle/objectbox-publish.gradle")
-
 task javadocJar(type: Jar, dependsOn: javadoc) {
     archiveClassifier = 'javadoc'
     from 'build/docs/javadoc'
@@ -53,28 +51,16 @@ task sourcesJar(type: Jar) {
     from 'README'
 }
 
-artifacts {
-    // jar added by java plugin.
-    archives javadocJar
-    archives sourcesJar
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            // Basic definitions are defined in root project
-            pom.project {
-                name 'ObjectBox Generator'
-                description 'Code generator for ObjectBox, the superfast NoSQL database for Objects'
-
-                licenses {
-                    license {
-                        name 'GNU General Public License, Version 3'
-                        url 'http://www.gnu.org/licenses/gpl.txt'
-                        distribution 'repo'
-                    }
-                }
-            }
+apply from: rootProject.file("gradle/objectbox-publish.gradle")
+// Set project-specific properties
+publishing.publications {
+    mavenJava(MavenPublication) {
+        from components.java
+        artifact sourcesJar
+        artifact javadocJar
+        pom {
+            name = 'ObjectBox Generator'
+            description = 'Code generator for ObjectBox, the superfast NoSQL database for Objects'
         }
     }
 }
