--- a/objectbox-gradle-plugin/build.gradle
+++ b/objectbox-gradle-plugin/build.gradle
@@ -108,8 +108,6 @@ tasks {
     }
 }
 
-apply from: rootProject.file("gradle/objectbox-publish.gradle")
-
 task javadocJar(type: Jar) {
     archiveClassifier = 'javadoc'
     from 'README'
@@ -126,22 +124,16 @@ artifacts {
     archives sourcesJar
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            // Basic definitions are defined in root project
-            pom.project {
-                name 'ObjectBox Gradle Plugin'
-                description 'Gradle Plugin for ObjectBox (NoSQL for Objects)'
-
-                licenses {
-                    license {
-                        name 'GNU General Public License, Version 3'
-                        url 'http://www.gnu.org/licenses/gpl.txt'
-                        distribution 'repo'
-                    }
-                }
-            }
+apply from: rootProject.file("gradle/objectbox-publish.gradle")
+// Set project-specific properties
+publishing.publications {
+    mavenJava(MavenPublication) {
+        from components.java
+        artifact sourcesJar
+        artifact javadocJar
+        pom {
+            name = 'ObjectBox Gradle Plugin'
+            description = 'Gradle Plugin for ObjectBox (NoSQL for Objects)'
         }
     }
 }
